--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 def fragment_version = "1.3.0-alpha06"
+def room_version = "2.2.5"
 
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "nl.soffware.madlevel3example"
+        applicationId "nl.soffware.madlevel4example"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
@@ -35,6 +37,9 @@ android {
 }
 
 dependencies {
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
